bugfix(app) Fix display of TabbedArea component on mobile
This is a placeholder till things get to the proper design. This adds the tabs to the top on mobile so that things aren't messy when this is used on mobile.

--- a/client/assets/stylesheets/_tabbed-area.sass
+++ b/client/assets/stylesheets/_tabbed-area.sass
@@ -90,3 +90,23 @@ $color-blackcharcoal: #3c3c3b
           background-repeat: no-repeat
           height: 10px
           width: 10px
+
+@media only screen and (max-width: $screen-xs-max)
+  .tabbed-area
+    border-top: none
+    .tabbed-area-sidebar
+      padding: 0px 15px
+      margin-bottom: 15px
+      text-transform: uppercase
+      border-bottom: 1px solid $grey
+      .sidebar-element
+        display: inline-block
+        padding: 5px
+        border-bottom: none
+        color: $blackish-grey
+        font-size: 10px
+        cursor: pointer
+        background: none !important
+        &.active
+          &::after
+            display: none
